--- a/e.html
+++ b/e.html
@@ -2,18 +2,47 @@
 <html lang="en">
     <meta charset="utf-8">
     <title>Eve Use Case</title>
+    <style>
+        .error { color: red; }
+    </style>
     <script src="eve.js"></script>
     <script>
         var log = function (text) {
             log.log = log.log || [];
             log.log.push(text);
         };
+        var expect = function (text) {
+            expect.log = expect.log || [];
+            expect.log.push(text);
+        };
+        var logAndExpect = function(text) { log(text); expect(text); }
         window.onload = function () {
-            document.getElementById("res").innerHTML = log.log.join("<br>");
+            var out = '',
+                outLength = Math.min(expect.log.length, log.log.length);
+            for (var i = 0, j = 0; i < outLength; i++, j++) {
+                if (log.log[i] !== expect.log[j]) {
+                    var lengthDiff = (log.log.length - i) - (expect.log.length - j);
+                    if (lengthDiff === 0) {
+                        out += '<span class="error">Actual: ' + log.log[i] + '; Expected: ' + expect.log[j] + '</span><br>';
+                    } else {
+                        if (lengthDiff < 0) {
+                            out += '<span class="error">Expected:' + expect.log[j] + '</span><br>';
+                            i--;
+                        } else {
+                            out += '<span class="error">Actual:' + log.log[i] + '</span><br>';
+                            j--;
+                        }
+                    }
+                } else {
+                    out += log.log[i] + '<br>';
+                }
+            }
+
+            document.getElementById("res").innerHTML = out;
         };
     </script>
     <script>
-        var f1, f2, f3, f4;
+        var f1, f2, f3, f4, f5, f6, Chester = {};
 
         // setting up listeners
         eve.on("hit", f1 = function () {
@@ -28,39 +57,57 @@
         eve.on("hit/*/leg", f4 = function () {
             log("   Ouch!");
         });
-        eve.once("hit", function () {
+        eve.once("hit", f5 = function () {
             log("   You scoundrel!");
         })(-1);
+        //eve.on("hit/chest", Chester, f6 = function() {
+        //    log("   Chester took a chester!");
+        //});
         
         // fire events
-        log("In your face!");
+        logAndExpect("In your face!");
         eve("hit/face");
-        // I’m hit!
-        // Oh, my face!
-        log("Take that!");
+        expect("   You scoundrel!");
+        expect("   I’m hit!");
+        expect("   Oh, my face!");
+
+        logAndExpect("Take that!");
         // You can use “.” or “/” as delimiter
         eve("hit.chest.leg");
-        // I’m hit!
-        // Oh, my chest!
-        // Ouch!
+        expect("   I’m hit!");
+        expect("   Oh, my chest!");
+        expect("   Ouch!");
+
+        // ancestor scope test
+        logAndExpect("Pinpoint accuracy!");
+        eve("hit/chest/leg/shin", Chester);
+        expect("   I’m hit!");
+        expect("   Oh, my chest!");
+        //expect("   Chester took a chester!");
+        expect("   Ouch!");
+
 
         // Unbinding
-        log("");
+        logAndExpect("<br>Chest semi-numbed.");
         eve.unbind("hit", f3);
-        log("Take that!");
-        eve("hit.chest.leg");
-        // I’m hit!
-        // Ouch!
+
+        logAndExpect("Take that!");
+        eve("hit.chest.leg", Chester);
+        expect("   I’m hit!");
+        //expect("   Chester took a chester!");
+        expect("   Ouch!");
 
         // Unbinding by wildcard
-        log("");
+        logAndExpect("<br>Full body numbed.");
         eve.unbind("hit/*");
-        log("In your face!");
+        logAndExpect("In your face!");
         eve("hit.face");
-        // I’m hit!
-        log("Take that!");
+        expect("   I’m hit!");
+
+        //unbind two levels up
+        logAndExpect("Take that!");
+        eve.unbind("hit");
         eve("hit.chest.leg");
-        // I’m hit!
     </script>
     <pre id="res"></pre>
 </html>
